--- a/asset/Style/magasin.css
+++ b/asset/Style/magasin.css
@@ -1417,3 +1417,13 @@ a.value {
         grid-template-columns: 1fr;
     }
 }
+.tm-description {
+    font-size: 24px;
+    font-weight: 500;
+    color: #111;
+    text-align: left;
+    margin: 40px 0 20px 0; /* espace haut/bas */
+    font-family: "Inter", system-ui, -apple-system, Segoe UI, Roboto, Arial;
+    padding-left: 525px; /* même retrait que les fiches */
+    margin-top: 20px;
+}
