--- a/asset/Style/customisation.css
+++ b/asset/Style/customisation.css
@@ -1,4 +1,8 @@
 /* Appliquer la police Inter à tout le document */
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: "Inter", sans-serif;
     font-weight: 400; /* poids par défaut */
@@ -32,7 +36,6 @@ header {
     width: 35px;
     height: 35px;
     border-radius: 50%;
-    padding: 12px 20px;
 }
 
 /* ✅ Style des 3 blocs (gauche, centre, droite) */
@@ -300,6 +303,7 @@ header {
 }
 a.value {
     text-decoration: none; /* enlève le souligné */
+     transition: 0.18s ease;
 }
 
 a.value:hover {
