--- a/asset/Style/style.css
+++ b/asset/Style/style.css
@@ -1,4 +1,8 @@
 /* Appliquer la police Inter à tout le document */
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: "Inter", sans-serif;
     font-weight: 400; /* poids par défaut */
@@ -32,10 +36,10 @@ header {
     width: 35px;
     height: 35px;
     border-radius: 50%;
-    padding: 12px 20px;
 }
 a.value {
     text-decoration: none; /* enlève le souligné */
+    transition: 0.18s ease;
 }
 
 a.value:hover {
